[gd_scene load_steps=9 format=2]

[ext_resource path="res://Button_Menu.gd" type="Script" id=1]
[ext_resource path="res://Buttons_Nav.gd" type="Script" id=2]
[ext_resource path="res://Font/Merriweather/Merriweather-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/NS_binary.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="Topic_1" type="Node2D"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1230.0
margin_bottom = 51.0

[node name="TitleText" type="Label" parent="VBoxContainer/Title"]
margin_right = 1230.0
margin_bottom = 51.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Number Systems"
align = 1

[node name="Main" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 1230.0
margin_bottom = 655.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Main"]
margin_right = 696.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 550 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Example_image" type="TextureRect" parent="VBoxContainer/Main/CenterContainer"]
margin_left = 48.0
margin_top = 100.0
margin_right = 648.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="questionAnswer" type="VBoxContainer" parent="VBoxContainer/Main"]
margin_left = 700.0
margin_right = 1230.0
margin_bottom = 600.0
rect_min_size = Vector2( 530, 0 )

[node name="Example_Question" type="Label" parent="VBoxContainer/Main/questionAnswer"]
margin_right = 530.0
margin_bottom = 129.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "How many digits does binary number system use?
"
align = 1
autowrap = true

[node name="Answers" type="VBoxContainer" parent="VBoxContainer/Main/questionAnswer"]
margin_top = 133.0
margin_right = 530.0
margin_bottom = 373.0

[node name="Button" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_right = 530.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "16"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_top = 61.0
margin_right = 530.0
margin_bottom = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "10"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_top = 122.0
margin_right = 530.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "8"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="VBoxContainer/Main/questionAnswer/Answers"]
margin_top = 183.0
margin_right = 530.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "2"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_to_load = "res://Number systems/Information5.tscn"

[node name="Navigation" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 659.0
margin_right = 1230.0
margin_bottom = 710.0

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/Navigation"]
margin_right = 578.0
margin_bottom = 51.0

[node name="Main_menu" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_right = 185.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
script = ExtResource( 1 )
scene_to_load = "res://MainMenu.tscn"

[node name="Return" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_left = 189.0
margin_right = 407.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Return to Info"
script = ExtResource( 1 )
scene_to_load = "res://Number systems/Information2.tscn"

[node name="Back_button" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_left = 411.0
margin_right = 494.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Back"
script = ExtResource( 1 )

[node name="Next_button" type="Button" parent="VBoxContainer/Navigation/Buttons"]
margin_left = 498.0
margin_right = 578.0
margin_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Next"
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/Navigation"]
margin_left = 582.0
margin_right = 1230.0
margin_bottom = 51.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Score: 15,500"
align = 2
